Main Screaming Frog Branch
- v7.0.0-sf1
- Updated to Java 21
- Update to latest Protocol
- Need to use PUT method not GET method current versions of Chromium
- Distribution Management to use GitHub Packages

Reviewed-by: Dave