@@ -5,9 +5,9 @@
     <!-- NOTE(kklisura): Do not add parent tag here, since it gets deployed (via mvn deploy)[at least on snapshot repo],
          so clients won't be able to pull it unless parent is also deployed -->
 
-    <groupId>com.github.kklisura.cdt</groupId>
+    <groupId>uk.co.screamingfrog.cdt</groupId>
     <artifactId>cdt-java-client</artifactId>
-    <version>4.0.0</version>
+    <version>7.0.0-sf1</version>
     <packaging>jar</packaging>
 
     <name>cdt-java-client</name>
@@ -41,44 +41,35 @@
     </scm>
 
     <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
         <repository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+            <id>github-cdt-java-client</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/screamingfrog/chrome-devtools-java-client</url>
         </repository>
     </distributionManagement>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
 
         <project.inceptionYear>2018</project.inceptionYear>
 
-        <jackson.version>2.11.3</jackson.version>
-        <websocket.api.version>1.1</websocket.api.version>
-        <tyrus.version>1.13.1</tyrus.version>
-        <javassist.version>3.24.1-GA</javassist.version>
-        <slf4j.version>1.7.25</slf4j.version>
+        <jackson.version>2.17.0-rc1</jackson.version>
+        <tyrus.version>2.1.5</tyrus.version>
+        <javassist.version>3.30.2-GA</javassist.version>
+        <slf4j.version>2.0.12</slf4j.version>
 
-        <logback.version>1.2.3</logback.version>
-        <junit.version>4.13.1</junit.version>
-        <jacoco.version>0.8.0</jacoco.version>
-        <easy.mock.version>3.4</easy.mock.version>
-        <powermock.version>1.6.6</powermock.version>
-        <jsonassert.version>1.5.0</jsonassert.version>
+        <logback.version>1.5.3</logback.version>
+        <junit.version>4.13.2</junit.version>
+        <jacoco.version>0.8.11</jacoco.version>
+        <easy.mock.version>4.3</easy.mock.version>
+        <powermock.version>2.0.9</powermock.version>
+        <jsonassert.version>1.5.1</jsonassert.version>
         <mockwebserver.version>2.7.5</mockwebserver.version>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>javax.websocket</groupId>
-            <artifactId>javax.websocket-api</artifactId>
-            <version>${websocket.api.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.glassfish.tyrus</groupId>
             <artifactId>tyrus-container-grizzly-client</artifactId>
@@ -145,6 +136,12 @@
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-easymock</artifactId>
+            <version>${powermock.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
             <artifactId>powermock-module-junit4</artifactId>
             <version>${powermock.version}</version>
             <scope>test</scope>
@@ -152,7 +149,7 @@
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-module-test-easymock-junit4</artifactId>
-            <version>${powermock.version}</version>
+            <version>1.6.6</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -184,7 +181,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.20.1</version>
+                        <version>3.2.5</version>
                         <configuration>
                             <systemPropertyVariables>
                                 <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
@@ -227,7 +224,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
-                        <version>3.0.1</version>
+                        <version>3.3.0</version>
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
@@ -240,7 +237,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>3.0.0</version>
+                        <version>3.6.3</version>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
@@ -256,7 +253,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.6</version>
+                        <version>3.1.0</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
@@ -284,10 +281,28 @@
         </resources>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <argLine>
+                        --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.util.regex=ALL-UNNAMED
+                        --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+                        --add-opens java.base/java.io=ALL-UNNAMED
+                        --add-opens java.base/sun.nio.fs=ALL-UNNAMED
+                        --add-opens java.base/java.nio.file=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
                 <!-- This plugin is also present in cdt-java-client, so be sure to copy any changes here to that module as well -->
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>license-maven-plugin</artifactId>
-                <version>2.0.0</version>
+                <version>2.4.0</version>
                 <executions>
                     <execution>
                         <id>update-file-header</id>
@@ -330,9 +345,9 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>com.coveo</groupId>
+                <groupId>com.spotify.fmt</groupId>
                 <artifactId>fmt-maven-plugin</artifactId>
-                <version>2.9.1</version>
+                <version>2.22.1</version>
                 <executions>
                     <execution>
                         <goals>
